Fix cropped checkbox animation

--- a/src/frontend/app/shared/components/stepper/steppers/steppers.component.scss
+++ b/src/frontend/app/shared/components/stepper/steppers/steppers.component.scss
@@ -64,6 +64,7 @@
     margin: 12px 36px;
     min-height: 160px;
     overflow-y: auto;
+    overflow: visible;
     padding: 0 2px; // Some cards/tables/etc will be clipped without this padding
   }
   &__wrapper {
